debug-manifests.yaml
---
# Source: infra/templates/amplify-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: amplify-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - dev.amplify-vkr.example.com
    port:
      name: http
      number: 80
      protocol: HTTP

---
# Source: user-service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice-user-service
  labels:
    helm.sh/chart: user-service-0.1.0
    app.kubernetes.io/name: user-service
    app.kubernetes.io/instance: userservice
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: user-service
    app.kubernetes.io/instance: userservice
---
# Source: user-service/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice-user-service
  labels:
    helm.sh/chart: user-service-0.1.0
    app.kubernetes.io/name: user-service
    app.kubernetes.io/instance: userservice
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: user-service
      app.kubernetes.io/instance: userservice
  template:
    metadata:
      labels:
        helm.sh/chart: user-service-0.1.0
        app.kubernetes.io/name: user-service
        app.kubernetes.io/instance: userservice
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: user-service-sa
      containers:
        - name: user-service
          image: "akisliy/amplify-userservice:0.1"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - mountPath: /app/appsettings.Development.json
              name: config-volume
              subPath: appsettings_override.json
      volumes:
        - configMap:
            name: userservice-config
          name: config-volume
---
# Source: user-service/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: muffin-currency-internal-vs
spec:
  hosts:
  - "dev.amplify-vkr.example.com"
  # intenral service communication
  - "userservice-user-service.amplify.svc.cluster.local"
  gateways:
  - amplify-gateway
  http:
  - match:
    - uri:
        prefix: "/api/auth"
    route:
    - destination:
        host: "userservice-user-service"
        port:
          number: 80
    timeout: 2s
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: gateway-error,connect-failure,refused-stream,5xx
