debug.yaml
---
# Source: infra/templates/amplify-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: amplify-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - dev.amplify-vkr.example.com
    port:
      name: http
      number: 80
      protocol: HTTP

---
# Source: userservice/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice
  labels:
    helm.sh/chart: userservice-0.1.0
    app.kubernetes.io/name: userservice
    app.kubernetes.io/instance: userservice
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: userservice
    app.kubernetes.io/instance: userservice
---
# Source: userservice/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  labels:
    helm.sh/chart: userservice-0.1.0
    app.kubernetes.io/name: userservice
    app.kubernetes.io/instance: userservice
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: userservice
      app.kubernetes.io/instance: userservice
  template:
    metadata:
      labels:
        helm.sh/chart: userservice-0.1.0
        app.kubernetes.io/name: userservice
        app.kubernetes.io/instance: userservice
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: user-service-sa
      containers:
        - name: userservice
          image: "akisliy/amplify-userservice:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - mountPath: /app/appsettings.Development.json
              name: config-volume
              subPath: appsettings_override.json
      volumes:
        - configMap:
            name: userservice-config
          name: config-volume
---
# Source: userservice/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: userservice-vs
spec:
  hosts:
  - "dev.amplify-vkr.example.com"
  # intenral service communication
  - "userservice.default.svc.cluster.local"
  gateways:
  - amplify-gateway
  http:
  - match:
    - uri:
        prefix: "/userservice"
    route:
    - destination:
        host: "userservice"
        port:
          number: 80
    timeout: 2s
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: gateway-error,connect-failure,refused-stream,5xx

---
# Source: publisher/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: publisher
  labels:
    helm.sh/chart: publisher-0.1.0
    app.kubernetes.io/name: publisher
    app.kubernetes.io/instance: publisher
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: publisher
    app.kubernetes.io/instance: publisher
---
# Source: publisher/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: publisher
  labels:
    helm.sh/chart: publisher-0.1.0
    app.kubernetes.io/name: publisher
    app.kubernetes.io/instance: publisher
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: publisher
      app.kubernetes.io/instance: publisher
  template:
    metadata:
      labels:
        helm.sh/chart: publisher-0.1.0
        app.kubernetes.io/name: publisher
        app.kubernetes.io/instance: publisher
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: publisher
      containers:
        - name: publisher
          image: "akisliy/amplify-publisher:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - mountPath: /app/appsettings.Development.json
              name: config-volume
              subPath: appsettings_override.json
      volumes:
        - configMap:
            name: publisher-config
          name: config-volume
---
# Source: publisher/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: publisher-vs
spec:
  hosts:
  - "dev.amplify-vkr.example.com"
  # intenral service communication
  - "publisher.default.svc.cluster.local"
  gateways:
  - amplify-gateway
  http:
  - match:
    - uri:
        prefix: "/publisher"
    route:
    - destination:
        host: "publisher"
        port:
          number: 80
    timeout: 2s
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: gateway-error,connect-failure,refused-stream,5xx

---
# Source: mediaingest/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mediaingest
  labels:
    helm.sh/chart: mediaingest-0.1.0
    app.kubernetes.io/name: mediaingest
    app.kubernetes.io/instance: mediaingest
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: mediaingest
    app.kubernetes.io/instance: mediaingest
---
# Source: mediaingest/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediaingest
  labels:
    helm.sh/chart: mediaingest-0.1.0
    app.kubernetes.io/name: mediaingest
    app.kubernetes.io/instance: mediaingest
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mediaingest
      app.kubernetes.io/instance: mediaingest
  template:
    metadata:
      labels:
        helm.sh/chart: mediaingest-0.1.0
        app.kubernetes.io/name: mediaingest
        app.kubernetes.io/instance: mediaingest
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: mediaingest-sa
      containers:
        - name: mediaingest
          image: "akisliy/amplify-mediaingest:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          volumeMounts:
            - mountPath: /app/appsettings.Development.json
              name: config-volume
              subpath: appsettings_override.json
      volumes:
        - configMap:
            name: mediaingest-config
          name: config-volume
---
# Source: mediaingest/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: mediaingest-vs
spec:
  hosts:
  - "dev.amplify-vkr.example.com"
  # intenral service communication
  - "mediaingest.default.svc.cluster.local"
  gateways:
  - amplify-gateway
  http:
  - match:
    - uri:
        prefix: "/media"
    route:
    - destination:
        host: "mediaingest"
        port:
          number: 80
    timeout: 2s
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: gateway-error,connect-failure,refused-stream,5xx
